--- a/pages/blankpage.html
+++ b/pages/blankpage.html
@@ -346,7 +346,7 @@
 
         <!--footer section start-->
         <footer class="sticky-footer">
-            2014 &copy; AdminEx by ThemeBucket
+            2017 &copy; tc
         </footer>
         <!--footer section end-->
 
