--- a/pages/blankpage.html
+++ b/pages/blankpage.html
@@ -60,7 +60,7 @@
                 
                 <li class="menu-list"><a href=""><i class="fa fa-laptop"></i> <span>养护设置</span></a>
                     <ul class="sub-menu-list">
-                        <li>s<a href="blank_page.html"> 发起养护计划</a></li>
+                        <li><a href="blank_page.html"> 发起养护计划</a></li>
                         <li><a href="boxed_view.html"> 养护计划数据反馈</a></li>
                         <li><a href="boxed_view.html"> 养护计划任务</a></li>
                       
